# byb-cars

./: .gitignore  README.md  arduino_code.ino  pyproject.toml  run_game.py  setup.py  simple_street.py  todelete.py  your_input_handler.py
byb_cars/: __init__.py  defaults.py  game_world.py  game_world_3d.py  input_handler.py  main.py  main_3d.py  simple_street.py
byb_cars/assets/: assets.ai
byb_cars/elements/: __init__.py  car.py  handle_assets.py  layout_config.py  plot.py  score_manager.py  world.py
byb_cars/simple_street/: resources.py  ui.py
simple_street/: __init__.py  entities.py
