[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byb-cars"
version = "0.1.0"
description = "A car racing game controlled by EMG signals"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PyQt6>=6.4.0",
    "pyqtgraph>=0.13.3",
    "numpy>=1.21.0",
    "pyfirmata>=1.1.0; platform_system != 'Windows'",  # Optional, for Arduino support
]

[project.scripts]
byb-cars = "byb_cars.main:main"

[tool.hatch.build.targets.wheel]
packages = ["byb_cars"] 